--- a/static/Views/home.pug
+++ b/static/Views/home.pug
@@ -25,7 +25,7 @@ block content
             .card.blue-grey.darken-1
                 #div1.card-content.white-text
                     span.card-title Online Users
-                    
+                    div.chip#myChip
                     
             div.newboard
                 div.crow
@@ -50,10 +50,15 @@ block content
     script.
         var socket = io();
         socket.on('chat', function(msg){
-            var elem = document.getElementById('div1');
-            var div = document.createElement("div");
-            div.classList.add('chip');
-            var node = document.createTextNode(msg);
-            div.appendChild(node);
-            elem.appendChild(div);
+            var arr = Object.keys(msg);
+            var sarr = Object.values(msg);
+            alert(sarr[0]);
+
+            if(msg =="No one is online"){
+                confirm("No one is online, Would you love to play with ticky");
+            }
+            else{
+                var elem =document.getElementById('myChip');
+                elem.innerHTML = msg;
+            }
         });
